syntax = "proto3";
option go_package = "/result_pb";

message Response {
  string ID = 1;
  bool Deleted = 2;
  string Error = 3;
}

service GrpcResult  {
  rpc DeleteByModule(DeleteByModuleRequest) returns (Response);
  rpc SoftDeleteByModule(DeleteByModuleRequest) returns (Response);
  rpc DeleteByClass(DeleteByClassRequest) returns (Response);
  rpc SoftDeleteByClass(DeleteByClassRequest) returns (Response);
  rpc DeleteByUser(DeleteByUserRequest) returns (Response);
  rpc SoftDeleteByUser(DeleteByUserRequest) returns (Response);
}

message DeleteByUserRequest {
  string UserID = 1;
  string BearerToken = 2;
}

message DeleteByClassRequest {
  string ClassID = 1;
  string BearerToken = 2;
}

message DeleteByModuleRequest {
  string ModuleID = 1;
  string BearerToken = 2;
}

